# github-

./: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
github/: CMakeLists.txt  client.cpp  repositories.cpp  repository.cpp  requestable.cpp
include/github++/: api_urls.h  client.h  error.h  github++.h  repositories.h  repository.h  requestable.h  types.h  user.h
